--- a/data-plane/receiver/pom.xml
+++ b/data-plane/receiver/pom.xml
@@ -49,6 +49,11 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-opentelemetry</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-sdk-testing</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>io.micrometer</groupId>
